Clean up TKMM distro

--- a/distributions/TKMM/config/smb.conf
+++ b/distributions/TKMM/config/smb.conf
@@ -8,7 +8,7 @@
 # available from your machine
 
 [global]
-  server string = Lakka
+  server string = TKMM-NX
   browseable = yes
   writeable = yes
   printable = no
@@ -48,122 +48,8 @@
 # Using the following configurations as a template allows you to add
 # writeable shares of disks and paths under /storage
 
-[Assets]
-  path = /tmp/assets
-  available = yes
-  browseable = yes
-  public = yes
-  writeable = yes
-
-[Overlays]
-  path = /tmp/overlays
-  available = yes
-  browseable = yes
-  public = yes
-  writeable = yes
-
-[Update]
-  path = /storage/.update
-  available = yes
-  browseable = yes
-  public = yes
-  writeable = yes
-  root preexec = mkdir -p /storage/.update
-
-[Cores]
-  path = /tmp/cores
-  available = yes
-  browseable = yes
-  public = yes
-  writeable = yes
-
-[ROMs]
-  path = /storage/roms
-  available = yes
-  browseable = yes
-  public = yes
-  writeable = yes
-  root preexec = mkdir -p /storage/roms
-
-[Playlists]
-  path = /storage/playlists
-  available = yes
-  browseable = yes
-  public = yes
-  writeable = yes
-
-[Savefiles]
-  path = /storage/savefiles
-  available = yes
-  browseable = yes
-  public = yes
-  writeable = yes
-
-[Savestates]
-  path = /storage/savestates
-  available = yes
-  browseable = yes
-  public = yes
-  writeable = yes
-
 [System]
   path = /tmp/system
-  available = yes
-  browseable = yes
-  public = yes
-  writeable = yes
-
-[Configfiles]
-  path = /storage/.config
-  available = yes
-  browseable = yes
-  public = yes
-  writeable = yes
-
-[Screenshots]
-  path = /storage/screenshots
-  available = yes
-  browseable = yes
-  public = yes
-  writeable = yes
-
-[Shaders]
-  path = /tmp/shaders
-  available = yes
-  browseable = yes
-  public = yes
-  writeable = yes
-
-[Joypads]
-  path = /tmp/joypads
-  available = yes
-  browseable = yes
-  public = yes
-  writeable = yes
-
-[Database]
-  path = /tmp/database
-  available = yes
-  browseable = yes
-  public = yes
-  writeable = yes
-
-[Thumbnails]
-  path = /storage/thumbnails
-  available = yes
-  browseable = yes
-  public = yes
-  writeable = yes
-
-[Remappings]
-  path = /storage/remappings
-  available = yes
-  browseable = yes
-  public = yes
-  writeable = yes
-
-[Logs]
-  path = /storage/logfiles
   available = yes
   browseable = yes
   public = yes
@@ -176,10 +62,30 @@
   public = yes
   writeable = yes
 
-[Recordings]
-  path = /storage/recordings
+[SDCard]
+  path = /flash
   available = yes
   browseable = yes
   public = yes
   writeable = yes
-  root preexec = mkdir -p /storage/recordings
+
+[Storage]
+  path = /storage
+  available = yes
+  browseable = yes
+  public = yes
+  writeable = yes
+
+[TkmmSystem]
+  path = /storage/.local/share/tkmm
+  available = yes
+  browseable = yes
+  public = yes
+  writeable = yes
+
+[TkmmData]
+  path = /storage/.config/tkmm
+  available = yes
+  browseable = yes
+  public = yes
+  writeable = yes
