--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
           sudo apt update
           sudo apt upgrade -y
           sudo apt install -y gcc make git unzip wget xz-utils bc gperf zip g++ xfonts-utils xsltproc openjdk-11-jre-headless \
-            libparse-yapp-perl libxml-parser-perl patchutils lzop
+            libparse-yapp-perl libxml-parser-perl patchutils lzop rdfind
           
       - name: Build image
         run: |
