--- a/.github/workflows/build-self-hosted.yml
+++ b/.github/workflows/build-self-hosted.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Update repository
         working-directory: /home/bubbles/TKMM-NX
         run: |
-          git fetch --all --tags
+          git fetch --all --tags -f
           git checkout ${{ github.ref_name }} -f
           
       - name: Build regular image
