--- a/.github/workflows/build-self-hosted.yml
+++ b/.github/workflows/build-self-hosted.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   build:
+    name: Build Images
     permissions: write-all
     runs-on: self-hosted
     outputs:
@@ -68,6 +69,7 @@ jobs:
           prerelease: false
 
   upload:
+    name: Upload Releases
     needs: [build, release]
     permissions: write-all
     runs-on: self-hosted
