--- a/.github/workflows/build-self-hosted.yml
+++ b/.github/workflows/build-self-hosted.yml
@@ -31,20 +31,10 @@ jobs:
         id: regular_build
         working-directory: /home/bubbles/TKMM-NX
         run: |
-          mkdir -p releases
+          rm -rf releases && mkdir -p releases
           rm -rf target/*
-          THREADCOUNT=20 DISTRO=TKMM PROJECT=L4T DEVICE=Switch ARCH=aarch64 make image
-          for file in target/TKMM-Switch.*; do
-            if [ -f "$file" ]; then
-              commit=$(echo "$file" | sed -E 's/.*-([a-f0-9]+)\.[^.]+(\.[^.]+)?$/\1/')
-              if [[ "$file" == *.tar.sha256 ]]; then
-                mv "$file" "releases/TKMM-NX-${{ github.ref_name }}-${commit}.tar.sha256"
-              else
-                ext="${file##*.}"
-                mv "$file" "releases/TKMM-NX-${{ github.ref_name }}-${commit}.${ext}"
-              fi
-            fi
-          done
+          THREADCOUNT=20 DISTRO=TKMM PROJECT=L4T DEVICE=Switch ARCH=aarch64 TKMM_VERSION=${{ github.ref_name }} make image
+          mv target/* releases/
           echo "success=true" >> $GITHUB_OUTPUT
 
       - name: Build debug image
@@ -52,19 +42,9 @@ jobs:
         working-directory: /home/bubbles/TKMM-NX
         continue-on-error: true
         run: |
-          mkdir -p debug
-          THREADCOUNT=20 DISTRO=TKMM PROJECT=L4T DEVICE=Switch ARCH=aarch64 DEVMODE=enabled make image
-          for file in target/TKMM-Switch.*; do
-            if [ -f "$file" ]; then
-              commit=$(echo "$file" | sed -E 's/.*-([a-f0-9]+)\.[^.]+(\.[^.]+)?$/\1/')
-              if [[ "$file" == *.tar.sha256 ]]; then
-                mv "$file" "debug/TKMM-NX-${{ github.ref_name }}-DEBUG-${commit}.tar.sha256"
-              else
-                ext="${file##*.}"
-                mv "$file" "debug/TKMM-NX-${{ github.ref_name }}-DEBUG-${commit}.${ext}"
-              fi
-            fi
-          done
+          rm -rf debug && mkdir -p debug
+          THREADCOUNT=20 DISTRO=TKMM PROJECT=L4T DEVICE=Switch ARCH=aarch64 DEVMODE=enabled TKMM_VERSION=${{ github.ref_name }} make image
+          mv target/* debug/
 
   release:
     needs: build
