--- a/.github/workflows/build-self-hosted.yml
+++ b/.github/workflows/build-self-hosted.yml
@@ -63,7 +63,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.github_token }}
         with:
           tag_name: ${{ github.ref_name }}
-          release_name: TKMM-NX - ${{ github.ref_name }}
+          release_name: TKMM-NX - v${{ github.ref_name }}
           draft: false
           prerelease: false
 
