Update SMB shares

--- a/distributions/TKMM/config/smb.conf
+++ b/distributions/TKMM/config/smb.conf
@@ -48,8 +48,8 @@
 # Using the following configurations as a template allows you to add
 # writeable shares of disks and paths under /storage
 
-[System]
-  path = /tmp/system
+[TMP]
+  path = /tmp
   available = yes
   browseable = yes
   public = yes
@@ -83,8 +83,15 @@
   public = yes
   writeable = yes
 
-[TkmmData]
-  path = /storage/.config/tkmm
+[TkmmLogs]
+  path = /storage/.local/share/tkmm/bin/Logs
+  available = yes
+  browseable = yes
+  public = yes
+  writeable = yes
+
+[TotkAtmosphereFolder]
+  path = /flash/atmosphere/contents/0100F2C0115B6000
   available = yes
   browseable = yes
   public = yes
