Adjust paths and such

--- a/distributions/TKMM/config/smb.conf
+++ b/distributions/TKMM/config/smb.conf
@@ -77,20 +77,20 @@
   writeable = yes
 
 [TkmmSystem]
-  path = /storage/.local/share/tkmm
+  path = /storage/.tkmm
   available = yes
   browseable = yes
   public = yes
   writeable = yes
 
 [TkmmLogs]
-  path = /storage/.local/share/tkmm/bin/Logs
+  path = /storage/.tkmm/Logs
   available = yes
   browseable = yes
   public = yes
   writeable = yes
 
-[TotkAtmosphereFolder]
+[TotkAtmosphereContentsFolder]
   path = /flash/atmosphere/contents/0100F2C0115B6000
   available = yes
   browseable = yes
