--- a/.github/workflows/build-self-hosted.yml
+++ b/.github/workflows/build-self-hosted.yml
@@ -33,6 +33,7 @@ jobs:
         run: |
           rm -rf releases && mkdir -p releases
           rm -rf target/*
+          DISTRO=TKMM PROJECT=L4T DEVICE=Switch ARCH=aarch64 scripts/clean tkmm
           THREADCOUNT=20 DISTRO=TKMM PROJECT=L4T DEVICE=Switch ARCH=aarch64 TKMM_VERSION=${{ github.ref_name }} make image
           mv target/* releases/
           echo "success=true" >> $GITHUB_OUTPUT
