Oops, I guess I forgot CTRL+S on that file

--- a/packages/tkmm/tkmm/system.d/tkmm.service
+++ b/packages/tkmm/tkmm/system.d/tkmm.service
@@ -9,7 +9,7 @@ Environment="DOTNET_ROOT=/usr/local/share/dotnet"
 Environment="PATH=/usr/local/share/dotnet:/storage/apps:/storage/apps/git/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
 Environment="HOME=/storage"
 Environment="LD_LIBRARY_PATH=/usr/lib:/usr/lib/pulseaudio"
-ExecStart=/storage/.local/share/tkmm/bin/tkmm
+ExecStart=/storage/.tkmm/Tkmm
 WorkingDirectory=/storage
 KillMode=process
 TimeoutStartSec=60s
