--- a/packages/tkmm/dotnet-sdk/profile.d/99-dotnet.conf
+++ b/packages/tkmm/dotnet-sdk/profile.d/99-dotnet.conf
@@ -1,2 +1,3 @@
 export DOTNET_ROOT=/usr/local/share/dotnet
 export PATH=$PATH:/usr/local/share/dotnet:/storage/apps
+export DOTNET_CLI_TELEMETRY_OPTOUT=1
