Configure capture button to take screenshots

--- a/packages/x11/driver/xf86-input-joystick/config/50-joystick.conf
+++ b/packages/x11/driver/xf86-input-joystick/config/50-joystick.conf
@@ -47,8 +47,8 @@ Section "InputClass"
     Option "MapButton13"     "key=66"   #Caps_Lock
     Option "MapButton14"     "button=2" #MClick
 
-    # Capture, Home --> Disable/Enable Mapping, Windows key.
-    Option "MapButton5"      "disable-all"
+    # Capture, Home --> Take screenshot, Windows key.
+    Option "MapButton5"      "key=156"  #XF86Launch1
     Option "MapButton12"     "key=133"  #Super_L
 
     # Dpad --> Up, Down, Left, Right.
