Fix environment variables access issue

--- a/packages/tkmm/tkmm/profile.d/99-tkmm.conf
+++ b/packages/tkmm/tkmm/profile.d/99-tkmm.conf
@@ -1,4 +1,4 @@
 export SOUND_CARD=$(aplay -L | sed -n 's/.*CARD=\([^,]*\).*/\1/p' | tail -n 1)
-export SNAPSHOT_SOUND="/storage/.cache/snapshot_sound"
-export SOUND_FOLDER="/usr/share/tkmm/audio"
-export SCREENSHOT_FOLDER="/flash/tkmm/screenshots"
+amixer -c $SOUND_CARD set 'x Speaker' 60%
+touch /storage/.cache/sound_card
+echo $SOUND_CARD > /storage/.cache/sound_card
