Works better with sh

--- a/packages/tkmm/tkmm/profile.d/99-tkmm.conf
+++ b/packages/tkmm/tkmm/profile.d/99-tkmm.conf
@@ -1,4 +1,5 @@
 export SOUND_CARD=$(aplay -L | sed -n 's/.*CARD=\([^,]*\).*/\1/p' | tail -n 1)
 amixer -c $SOUND_CARD set 'x Speaker' 60%
+rm -f /storage/.cache/sound_card
 touch /storage/.cache/sound_card
 echo $SOUND_CARD > /storage/.cache/sound_card
