--- a/.github/workflows/build-self-hosted.yml
+++ b/.github/workflows/build-self-hosted.yml
@@ -64,7 +64,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.github_token }}
         with:
           tag_name: ${{ github.ref_name }}
-          release_name: TKMM-NX - v${{ github.ref_name }}
+          release_name: TKMM-NX - ${{ github.ref_name }}
           draft: false
           prerelease: false
 
@@ -85,7 +85,7 @@ jobs:
         working-directory: /home/bubbles/TKMM-NX
         run: |
           mv releases/*.zip releases/tkmm-nx.zip
-          mv debug/-*.zip debug/tkmm-nx-debug.zip
+          mv debug/*.zip debug/tkmm-nx-debug.zip
 
       - name: Upload Release Assets
         uses: softprops/action-gh-release@v1
