Update samba configuration

--- a/distributions/TKMM/config/smb.conf
+++ b/distributions/TKMM/config/smb.conf
@@ -83,8 +83,15 @@
   public = yes
   writeable = yes
 
+[TkmmScreenshots]
+  path = /flash/tkmm/screenshots
+  available = yes
+  browseable = yes
+  public = yes
+  writeable = yes
+  
 [TkmmLogs]
-  path = /storage/.tkmm/Logs
+  path = /flash/tkmm/Logs
   available = yes
   browseable = yes
   public = yes
