--- a/.github/workflows/build-self-hosted.yml
+++ b/.github/workflows/build-self-hosted.yml
@@ -34,6 +34,7 @@ jobs:
           rm -rf releases && mkdir -p releases
           rm -rf target/*
           DISTRO=TKMM PROJECT=L4T DEVICE=Switch ARCH=aarch64 scripts/clean tkmm
+          DISTRO=TKMM PROJECT=L4T DEVICE=Switch ARCH=aarch64 scripts/clean samba
           THREADCOUNT=20 DISTRO=TKMM PROJECT=L4T DEVICE=Switch ARCH=aarch64 TKMM_VERSION=${{ github.ref_name }} make image
           mv target/* releases/
           echo "success=true" >> $GITHUB_OUTPUT
