Update linux profile config

--- a/packages/tkmm/tkmm/profile.d/99-tkmm.conf
+++ b/packages/tkmm/tkmm/profile.d/99-tkmm.conf
@@ -1,5 +1,11 @@
+# set the sound card to 40% volume
 export SOUND_CARD=$(aplay -L | sed -n 's/.*CARD=\([^,]*\).*/\1/p' | tail -n 1)
-amixer -c $SOUND_CARD set 'x Speaker' 60%
+amixer -c $SOUND_CARD set 'x Speaker' 40%
+
+# cache the sound card's name for audio playback scripts
 rm -f /storage/.cache/sound_card
 touch /storage/.cache/sound_card
 echo $SOUND_CARD > /storage/.cache/sound_card
+
+# scale the display for TKMM because switch screen small
+xrandr --output "$(xrandr | awk '/ connected / { print $1; exit }')" --scale 0.875x0.875
