Add configurable screen scaling and volume options

--- a/packages/tkmm/tkmm/profile.d/99-tkmm.conf
+++ b/packages/tkmm/tkmm/profile.d/99-tkmm.conf
@@ -1,11 +1,16 @@
-# set the sound card to 40% volume
+# TKMM Profile Configuration
+
+# Reads settings from tkmm/config.ini on the SD card
+. /usr/bin/tkmm-config
+
+# set the sound card to configured volume
 export SOUND_CARD=$(aplay -L | sed -n 's/.*CARD=\([^,]*\).*/\1/p' | tail -n 1)
-amixer -c $SOUND_CARD set 'x Speaker' 40%
+amixer -c "$SOUND_CARD" set 'x Speaker' "${TKMM_VOLUME_PERCENT}%" >/dev/null 2>&1
 
 # cache the sound card's name for audio playback scripts
 rm -f /storage/.cache/sound_card
 touch /storage/.cache/sound_card
 echo $SOUND_CARD > /storage/.cache/sound_card
 
-# scale the display for TKMM because switch screen small
-xrandr --output "$(xrandr | awk '/ connected / { print $1; exit }')" --scale 0.875x0.875
+# scale the display for TKMM based on config file because switch screen small
+xrandr --output "$(xrandr | awk '/ connected / { print $1; exit }')" --scale $TKMM_SCALE_FACTOR
