--- a/packages/tkmm/tkmm/config.ini
+++ b/packages/tkmm/tkmm/config.ini
@@ -1,5 +1,5 @@
 # TKMM Configuration File
-# This file allows users to customize the application scale and volume settings
+# This file allows customizing the application scale and volume settings
 # IMPORTANT: A reboot is required for these changes to take effect
 
 [Display]
@@ -7,7 +7,8 @@
 # Available options:
 # 1 = 0.75x0.75 (smaller display)
 # 2 = 0.875x0.875 (default - medium display)
-# 3 = 1.25x1.25 (larger display)
+# 3 = 1x1 (full display)
+# 4 = 1.25x1.25 (larger display)
 # Default: 2
 scale = 2
 
