Move every option to config.ini

--- a/packages/tkmm/tkmm/config.ini
+++ b/packages/tkmm/tkmm/config.ini
@@ -1,6 +1,6 @@
 # TKMM Configuration File
 # This file allows customizing the application scale and volume settings
-# IMPORTANT: A reboot is required for these changes to take effect
+# IMPORTANT: A reboot is required for changes to take effect (only applies to scale and volume)
 
 [Display]
 # Application scale setting
@@ -13,7 +13,18 @@
 scale = 2
 
 [Audio]
-# Volume setting (0-100)
+# Volume setting
 # Valid range: 0 to 100 (percentage)
 # Default: 40
 volume = 40
+
+[Snapshot]
+# This option allows you to change the sound when taking a screenshot
+# Change it to figure out what they sound like I guess
+# Available options:
+# 0 = shutter0.wav (default)
+# 1 = shutter1.wav
+# 2 = click.wav
+# 3 = fire.wav
+# Default: 0
+sound = 0
