--- a/packages/tkmm/tkmm/profile.d/99-tkmm.conf
+++ b/packages/tkmm/tkmm/profile.d/99-tkmm.conf
@@ -1,4 +1,5 @@
 # TKMM Profile Configuration
+# These are commands that run once at every boot
 
 # Reads settings from tkmm/config.ini on the SD card
 . /usr/bin/tkmm-config
@@ -12,5 +13,5 @@ rm -f /storage/.cache/sound_card
 touch /storage/.cache/sound_card
 echo $SOUND_CARD > /storage/.cache/sound_card
 
-# scale the display for TKMM based on config file because switch screen small
+# scale the display for TKMM based on the config file because switch screen small
 xrandr --output "$(xrandr | awk '/ connected / { print $1; exit }')" --scale $TKMM_SCALE_FACTOR
