Reorganize scripts and such

--- a/packages/tkmm/tkmm/profile.d/99-tkmm.conf
+++ b/packages/tkmm/tkmm/profile.d/99-tkmm.conf
@@ -1,17 +1,11 @@
 # TKMM Profile Configuration
-# These are commands that run once at every boot
+# These commands run once at boot
 
-# Reads settings from tkmm/config.ini on the SD card
-. /usr/bin/tkmm-config
+# fetch the sound card's name
+SOUND_CARD=$(aplay -L | sed -n 's/.*CARD=\([^,]*\).*/\1/p' | tail -n 1)
 
-# set the sound card to configured volume
-export SOUND_CARD=$(aplay -L | sed -n 's/.*CARD=\([^,]*\).*/\1/p' | tail -n 1)
-amixer -c "$SOUND_CARD" set 'x Speaker' "${TKMM_VOLUME_PERCENT}%" >/dev/null 2>&1
-
-# cache the sound card's name for audio playback scripts
-rm -f /storage/.cache/sound_card
-touch /storage/.cache/sound_card
+# cache the sound card's name for use by other scripts
 echo $SOUND_CARD > /storage/.cache/sound_card
 
-# scale the display for TKMM based on the config file because switch screen small
-xrandr --output "$(xrandr | awk '/ connected / { print $1; exit }')" --scale $TKMM_SCALE_FACTOR
+# apply the volume and display scale configuration
+. /usr/bin/apply-config
