--- a/packages/tkmm/tkmm/config.ini
+++ b/packages/tkmm/tkmm/config.ini
@@ -8,7 +8,8 @@
 # 1 = 0.75x0.75 (smaller display)
 # 2 = 0.875x0.875 (default - medium display)
 # 3 = 1x1 (full display)
-# 4 = 1.25x1.25 (larger display)
+# 4 = 1.125x1.125 (larger display)
+# 5 = 1.25x1.25 (big boi display)
 # Default: 2
 scale = 2
 
