--- a/packages/tkmm/tkmm/profile.d/99-tkmm.conf
+++ b/packages/tkmm/tkmm/profile.d/99-tkmm.conf
@@ -1,11 +1,10 @@
 # TKMM Profile Configuration
 # These commands run once at boot
 
-# fetch the sound card's name
+# fetch the sound card and display names
 SOUND_CARD=$(aplay -L | sed -n 's/.*CARD=\([^,]*\).*/\1/p' | tail -n 1)
+DISPLAY_NAME=$(xrandr | awk '/ connected / { print $1; exit }')
 
-# cache the sound card's name for use by other scripts
+# cache for use by other scripts
 echo $SOUND_CARD > /storage/.cache/sound_card
-
-# apply the volume and display scale configuration
-. /usr/bin/apply-config
+echo $DISPLAY_NAME > /storage/.cache/display_name
