use AVALONIA_GLOBAL_SCALE_FACTOR instead of xrandr

--- a/packages/tkmm/tkmm/config.ini
+++ b/packages/tkmm/tkmm/config.ini
@@ -4,14 +4,10 @@
 
 [Display]
 # Application scale setting
-# Available options:
-# 1 = 0.75x0.75 (smaller display)
-# 2 = 0.875x0.875 (default - medium display)
-# 3 = 1x1 (full display)
-# 4 = 1.125x1.125 (larger display)
-# 5 = 1.25x1.25 (big boi display)
-# Default: 2
-scale = 2
+# This sets the AVALONIA_GLOBAL_SCALE_FACTOR environment variable
+# Valid range: 0.50 to 2.00
+# Default: 1.00
+scale = 1.00
 
 [Audio]
 # Volume setting
