--- a/packages/tkmm/tkmm/profile.d/99-tkmm.conf
+++ b/packages/tkmm/tkmm/profile.d/99-tkmm.conf
@@ -1,10 +1,8 @@
 # TKMM Profile Configuration
 # These commands run once at boot
 
-# fetch the sound card and display names
+# fetch sound card name and apply configuration
 SOUND_CARD=$(aplay -L | sed -n 's/.*CARD=\([^,]*\).*/\1/p' | tail -n 1)
-DISPLAY_NAME=$(xrandr | awk '/ connected / { print $1; exit }')
-
-# cache for use by other scripts
 echo $SOUND_CARD > /storage/.cache/sound_card
-echo $DISPLAY_NAME > /storage/.cache/display_name
+
+apply-config
