No, it doesn't take me hours for simple small things

--- a/packages/tkmm/tkmm/config.ini
+++ b/packages/tkmm/tkmm/config.ini
@@ -4,10 +4,10 @@
 
 [Display]
 # Application scale setting
-# This sets the AVALONIA_GLOBAL_SCALE_FACTOR environment variable
-# Valid range: 0.50 to 2.00
-# Default: 1.00
-scale = 1.00
+# This sets the AVALONIA_GLOBAL_SCALE_FACTOR environment variable based on the defined percentage
+# Valid range: 50 to 200
+# Default: 100
+scale = 100
 
 [Audio]
 # Volume setting
