Add support for upfs to switch build. (#2045)
* Packages: sysutils: Add upFS

* Packages: sysutils: fuse: add initramfs support

* packages: sysutils: e2fsprogs: add mkfs tools to switch initramfs

* Packages: Sysutils: add bindfs

* L4T: busybox: implement crude upfs implementation

* L4T: Switch: switch-bootloader: update boot.scr and readme_config for upfs, and ipv6 enable

* Project: L4T: Switch: pulseaudio: update enviornment in systemd service to work with upfs.

--- a/projects/L4T/devices/Switch/packages/pulseaudio/system.d/pulseaudio.service
+++ b/projects/L4T/devices/Switch/packages/pulseaudio/system.d/pulseaudio.service
@@ -5,11 +5,10 @@ After=syslog.target local-fs.target
 [Service]
 Type=dbus
 BusName=org.pulseaudio.Server
-ExecStartPre=/bin/rm -rf /storage/.config/pulse/*
 ExecStart=/usr/bin/pulseaudio --system --disallow-exit --exit-idle-time=-1 --disable-shm --enable-memfd --realtime
 Restart=on-failure
-Environment=PULSE_STATE_PATH=/storage/.config/pulse
-Environment=PULSE_CONFIG_PATH=/storage/.config/pulse
+Environment=PULSE_STATE_PATH=/run/pulse
+Environment=PULSE_CONFIG_PATH=/run/pulse
 
 [Install]
 WantedBy=multi-user.target
