--- a/.github/workflows/build-self-hosted.yml
+++ b/.github/workflows/build-self-hosted.yml
@@ -19,7 +19,10 @@ jobs:
           sudo apt update
           sudo apt upgrade -y
           sudo apt install -y gcc make git unzip wget xz-utils bc gperf zip g++ xfonts-utils xsltproc \
-            openjdk-11-jre-headless libparse-yapp-perl libxml-parser-perl patchutils lzop rdfind dotnet-sdk-9.0
+            openjdk-11-jre-headless libparse-yapp-perl libxml-parser-perl patchutils lzop rdfind
+          wget https://dot.net/v1/dotnet-install.sh -O dotnet-install.sh && chmod +x dotnet-install.sh && ./dotnet-install.sh --channel 9.0
+          rm dotnet-install.sh
+
 
       - name: Update repository
         working-directory: /home/bubbles/TKMM-NX
