--- a/.github/workflows/build-self-hosted.yml
+++ b/.github/workflows/build-self-hosted.yml
@@ -23,7 +23,6 @@ jobs:
           wget https://dot.net/v1/dotnet-install.sh -O dotnet-install.sh && chmod +x dotnet-install.sh && ./dotnet-install.sh --channel 9.0
           rm dotnet-install.sh
 
-
       - name: Update repository
         working-directory: /home/bubbles/TKMM-NX
         run: |
@@ -34,6 +33,7 @@ jobs:
         id: regular_build
         working-directory: /home/bubbles/TKMM-NX
         run: |
+          export PATH="/home/bubbles/.dotnet:$PATH"
           rm -rf releases && mkdir -p releases
           rm -rf target/*
           DISTRO=TKMM PROJECT=L4T DEVICE=Switch ARCH=aarch64 scripts/clean tkmm
@@ -47,6 +47,7 @@ jobs:
         working-directory: /home/bubbles/TKMM-NX
         continue-on-error: true
         run: |
+          export PATH="/home/bubbles/.dotnet:$PATH"
           rm -rf debug && mkdir -p debug
           THREADCOUNT=20 DISTRO=TKMM PROJECT=L4T DEVICE=Switch ARCH=aarch64 DEVMODE=enabled TKMM_VERSION=${{ github.ref_name }} make image
           mv target/* debug/
